# Medium-clone

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a64d11a7ff44_init.py
app/: celery_worker.py  config.py  database.py  dependencies.py
app/admin/: admin.py  auth.py
app/middlewares/: __init__.py  timing.py
app/models/: article.py  user.py
app/routers/: articles.py  auth.py  users.py
app/schemas/: article.py  auth.py  user.py
app/services/: digest.py
app/static/css/: style.css
app/tasks/: digest.py  email.py
app/templates/: index.html
app/utils/: security.py  storage.py
static/: style.css
